# the-great-site-generator

./: CONTRIBUTING.md  Problems.rtf  README.md  run_clang_format.sh  the-great-site-generator-sample.html
.github/workflows/: learn-github-actions.yml
test/: The Red Headed League.txt  test.md
thegreatsitegenerator/: CMakeLists.txt  TGSGConfig.h.in  The Red Headed League.txt  conanfile.py  main.cpp  markdownTest.md  portfile.cmake  reading-test.cpp  reading.h  tgsg  the-great-site-generator-sample.txt  vcpkg.json
thegreatsitegenerator/sample/: change.txt  climate.txt  humanity.txt
thegreatsitegenerator/test_package/: conanfile.py
